# dare

./: CMakeLists.txt  autogen.cpp  autogen.h  autogen.py  autogen_types.h  autogenerate.py  autotune.cpp  autotune.h  autotune_config.xml  callbacks.cpp  cmake.py  config.py  dare.txt  dare_base.cpp  dare_base.h  hooks.cpp  main.c  new_autogen.py  notes.txt  ompt_entry_point.cpp  plasma_trace.h  profile.cpp  profile.h  profile_types.h  simulate.h  trace.c  trace_config.xml  weak_attribute.py  wrap.xml
autotune/: CMakeLists.txt  autotune.txt  dgemm_point_select.txt  gantt.py  gather_data.py  gen_config.py  gen_config.xml  gen_tile_sizes.py  main.cpp  plot_data.py  sbatch.sh  sbatch_dgemm.sh  sbatch_stdout.txt  tile_sizes.txt  tile_sizes_stdin.txt  time_fraction.py
autotune/bad_results/set_0/: gen_config.xml  output.txt
autotune/good_results/set_0/: gen_config.xml  output.txt
autotune/good_results/set_1/: output.txt
autotune/good_results/set_2/: gen_config.xml  output.txt
autotune_dgeqrf/: autotune_data.txt  backup.cpp  main.cpp
autotune_dpotrf/: .autotune.txt.swp  autotune.txt  config.txt  gen_config.py  run.py
dare_autotune_test/: CMakeLists.txt  autotune.txt  config.txt  dgemm_dpotrf  dpotrf_test  gen_config.py  main.c  output.txt  run.py
dare_test/: dgemm_dpotrf  main.c  plot.py  run.py  test  test.cpp
dare_trace_test/: CMakeLists.txt  dgemm_dpotrf  dpotrf_test  gantt.py  main.c
data_analysis/: analysis_config.xml  analyze.py  compare.py  data_analysis.txt  sbatch.sh  stride_test.cpp
docs/: main.tex
fake_data_test/: CMakeLists.txt  fake_data.cpp  fake_data.h  fake_data.txt  fake_data_test  main.cpp
matrix_classes/: matrix_classes.cpp  matrix_classes.h
saturn_tests/: plot_cholesky.py  sbatch.py  slurm.txt  t10_nb128.sh  t10_nb256.sh  t10_nb512.sh  t10_nb64.sh  t1_nb128.sh  t1_nb256.sh  t1_nb512.sh  t1_nb64.sh  t20_nb128.sh  t20_nb256.sh  t20_nb512.sh  t20_nb64.sh  t5_nb128.sh  t5_nb256.sh  t5_nb512.sh  t5_nb64.sh
trace/: kernel_colors.xml
trace_dpotrf/: main.c
